2026 01 29 Standardize code